--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -29,110 +29,116 @@ spec:
         module: vegetation-prime
     spec:
       containers:
-      - name: api
-        image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.12.0
-        imagePullPolicy: Always
-        ports:
-        - name: http
-          containerPort: 8000
-        env:
-        # Database Configuration
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: postgresql-secret
-              key: postgres-url
-        # Platform Database Configuration (for reading external_api_credentials)
-        # Platform Database Name (used to construct connection to platform DB from DATABASE_URL)
-        # The external_api_credentials table is in the 'nekazari' database
-        - name: PLATFORM_DATABASE_NAME
-          value: "nekazari"
-        # Redis Configuration (Celery + Cache)
-        - name: CELERY_BROKER_URL
-          value: "redis://redis-service:6379/0"
-        - name: CELERY_RESULT_BACKEND
-          value: "redis://redis-service:6379/0"
-        - name: REDIS_CACHE_URL
-          value: "redis://redis-service:6379/1"
-        # Authentication (Keycloak)
-        # JWT_ISSUER must match the 'iss' claim in the JWT token from Keycloak
-        # Keycloak with KC_HTTP_RELATIVE_PATH=/auth uses: https://auth.artotxiki.com/auth/realms/nekazari
-        - name: JWT_ISSUER
-          value: "https://auth.artotxiki.com/auth/realms/nekazari"
-        # JWKS URL for Keycloak with /auth path: /auth/realms/{realm}/protocol/openid-connect/certs
-        - name: JWKS_URL
-          value: "https://auth.artotxiki.com/auth/realms/nekazari/protocol/openid-connect/certs"
-        - name: JWT_ALGORITHM
-          value: "RS256"
-        # Service-to-Service Authentication
-        - name: MODULE_MANAGEMENT_KEY
-          valueFrom:
-            secretKeyRef:
-              name: module-management-secret
-              key: key
-              optional: true  # Optional for now, will be required in production
-        # Storage (S3/MinIO) - Optional
-        - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              name: vegetation-prime-secrets
-              key: aws-access-key-id
-              optional: true
-        - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: vegetation-prime-secrets
-              key: aws-secret-access-key
-              optional: true
-        - name: S3_ENDPOINT_URL
-          valueFrom:
-            configMapKeyRef:
-              name: vegetation-prime-config
-              key: s3-endpoint-url
-              optional: true
-        - name: S3_BUCKET
-          value: "vegetation-prime"
-        # Limits Configuration (Defaults)
-        - name: DEFAULT_MONTHLY_HA_LIMIT
-          value: "10.0"
-        - name: DEFAULT_DAILY_HA_LIMIT
-          value: "5.0"
-        - name: DEFAULT_DAILY_JOBS_LIMIT
-          value: "5"
-        - name: DEFAULT_DAILY_DOWNLOAD_JOBS
-          value: "3"
-        - name: DEFAULT_DAILY_PROCESS_JOBS
-          value: "10"
-        - name: DEFAULT_DAILY_CALCULATE_JOBS
-          value: "20"
-        # Logging
-        - name: LOG_LEVEL
-          value: "INFO"
-        - name: SQL_ECHO
-          value: "false"
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "100m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 10
-          periodSeconds: 5
-          timeoutSeconds: 3
-          failureThreshold: 3
+        - name: api
+          image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.12.0
+          imagePullPolicy: Always
+          ports:
+            - name: http
+              containerPort: 8000
+          env:
+            # Database Configuration
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: postgres-url
+            # Platform Database Configuration (for reading external_api_credentials)
+            # Platform Database Name (used to construct connection to platform DB from DATABASE_URL)
+            # The external_api_credentials table is in the 'nekazari' database
+            - name: PLATFORM_DATABASE_NAME
+              value: "nekazari"
+            # Redis Password (required for authentication)
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis-secret
+                  key: redis-password
+            # Redis Configuration (Celery + Cache) - with authentication
+            - name: CELERY_BROKER_URL
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/0"
+            - name: CELERY_RESULT_BACKEND
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/0"
+            - name: REDIS_CACHE_URL
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/1"
+            # Authentication (Keycloak)
+            # JWT_ISSUER must match the 'iss' claim in the JWT token from Keycloak
+            # Keycloak with KC_HTTP_RELATIVE_PATH=/auth uses: https://auth.artotxiki.com/auth/realms/nekazari
+            - name: JWT_ISSUER
+              value: "https://auth.artotxiki.com/auth/realms/nekazari"
+            # JWKS URL for Keycloak with /auth path: /auth/realms/{realm}/protocol/openid-connect/certs
+            - name: JWKS_URL
+              value: "https://auth.artotxiki.com/auth/realms/nekazari/protocol/openid-connect/certs"
+            - name: JWT_ALGORITHM
+              value: "RS256"
+            # Service-to-Service Authentication
+            - name: MODULE_MANAGEMENT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: module-management-secret
+                  key: key
+                  optional: true # Optional for now, will be required in production
+            # Storage (S3/MinIO) - Optional
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: vegetation-prime-secrets
+                  key: aws-access-key-id
+                  optional: true
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: vegetation-prime-secrets
+                  key: aws-secret-access-key
+                  optional: true
+            - name: S3_ENDPOINT_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: vegetation-prime-config
+                  key: s3-endpoint-url
+                  optional: true
+            - name: S3_BUCKET
+              value: "vegetation-prime"
+            # Limits Configuration (Defaults)
+            - name: DEFAULT_MONTHLY_HA_LIMIT
+              value: "10.0"
+            - name: DEFAULT_DAILY_HA_LIMIT
+              value: "5.0"
+            - name: DEFAULT_DAILY_JOBS_LIMIT
+              value: "5"
+            - name: DEFAULT_DAILY_DOWNLOAD_JOBS
+              value: "3"
+            - name: DEFAULT_DAILY_PROCESS_JOBS
+              value: "10"
+            - name: DEFAULT_DAILY_CALCULATE_JOBS
+              value: "20"
+            # Logging
+            - name: LOG_LEVEL
+              value: "INFO"
+            - name: SQL_ECHO
+              value: "false"
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "100m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
 
 ---
 # Service: Vegetation Prime API
@@ -150,8 +156,7 @@ spec:
   selector:
     app: vegetation-prime-api
   ports:
-  - name: http
-    port: 8000
-    targetPort: 8000
-    protocol: TCP
-
+    - name: http
+      port: 8000
+      targetPort: 8000
+      protocol: TCP
