--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -17,7 +17,7 @@ metadata:
     module: vegetation-prime
     nekazari.io/profile: addon
 spec:
-  replicas: 1  # Scale based on workload
+  replicas: 1 # Scale based on workload
   selector:
     matchLabels:
       app: vegetation-prime-worker
@@ -29,57 +29,70 @@ spec:
         module: vegetation-prime
     spec:
       containers:
-      - name: worker
-        image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.12.0
-        imagePullPolicy: Always
-        command: ["celery", "-A", "app.celery_app", "worker", "--loglevel=info", "--concurrency=4"]
-        env:
-        # Database Configuration
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: postgresql-secret
-              key: postgres-url
-        # Redis Configuration
-        - name: CELERY_BROKER_URL
-          value: "redis://redis-service:6379/0"
-        - name: CELERY_RESULT_BACKEND
-          value: "redis://redis-service:6379/0"
-        - name: REDIS_CACHE_URL
-          value: "redis://redis-service:6379/1"
-        # Storage (S3/MinIO)
-        - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              name: vegetation-prime-secrets
-              key: aws-access-key-id
-              optional: true
-        - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: vegetation-prime-secrets
-              key: aws-secret-access-key
-              optional: true
-        - name: S3_ENDPOINT_URL
-          valueFrom:
-            configMapKeyRef:
-              name: vegetation-prime-config
-              key: s3-endpoint-url
-              optional: true
-        - name: S3_BUCKET
-          value: "vegetation-prime"
-        # Logging
-        - name: LOG_LEVEL
-          value: "INFO"
-        - name: SQL_ECHO
-          value: "false"
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "200m"
-          limits:
-            memory: "1Gi"
-            cpu: "1000m"
-        # Workers don't need health checks (Celery manages them internally)
-        # But we can add a readiness probe if needed
-
+        - name: worker
+          image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.12.0
+          imagePullPolicy: Always
+          command:
+            [
+              "celery",
+              "-A",
+              "app.celery_app",
+              "worker",
+              "--loglevel=info",
+              "--concurrency=4",
+            ]
+          env:
+            # Database Configuration
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: postgres-url
+            # Redis Password (required for authentication)
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis-secret
+                  key: redis-password
+            # Redis Configuration (Celery + Cache) - with authentication
+            - name: CELERY_BROKER_URL
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/0"
+            - name: CELERY_RESULT_BACKEND
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/0"
+            - name: REDIS_CACHE_URL
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/1"
+            # Storage (S3/MinIO)
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: vegetation-prime-secrets
+                  key: aws-access-key-id
+                  optional: true
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: vegetation-prime-secrets
+                  key: aws-secret-access-key
+                  optional: true
+            - name: S3_ENDPOINT_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: vegetation-prime-config
+                  key: s3-endpoint-url
+                  optional: true
+            - name: S3_BUCKET
+              value: "vegetation-prime"
+            # Logging
+            - name: LOG_LEVEL
+              value: "INFO"
+            - name: SQL_ECHO
+              value: "false"
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "200m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
+          # Workers don't need health checks (Celery manages them internally)
+          # But we can add a readiness probe if needed
