--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@deck.gl/geo-layers": "^9.0.0",
     "@deck.gl/layers": "^9.0.0",
     "@deck.gl/mapbox": "^9.0.0",
-    "@nekazari/sdk": "file:../nekazari-public/packages/sdk",
+    "@nekazari/sdk": "^1.0.3",
     "@nekazari/ui-kit": "^1.0.0",
     "lucide-react": "^0.424.0",
     "maplibre-gl": "^3.6.0",
