chore: Update k8s manifests to use latest images for continuous delivery

--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.13.0
+          image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:latest
           imagePullPolicy: Always
           command:
             [
