--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@deck.gl/mapbox": "^9.0.0",
     "@nekazari/sdk": "^1.0.3",
     "@nekazari/ui-kit": "^1.0.0",
+    "cesium": "^1.137.0",
     "lucide-react": "^0.424.0",
     "maplibre-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "vite-plugin-cesium": "^1.2.23"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.0",
