--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@deck.gl/mapbox": "^9.0.0",
     "@nekazari/sdk": "^1.0.3",
     "@nekazari/ui-kit": "^1.0.0",
+    "axios": "^1.13.2",
     "lucide-react": "^0.424.0",
     "maplibre-gl": "^3.6.0",
     "react": "^18.3.1",
