--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,8 @@ on:
       - 'v*.*.*'
     paths:
       - 'frontend/**'
-      - 'backend/**'
+      # - 'backend/**' # Disabled to valid user complaint about "building platform"
+      - 'src/**'       # Ensure src is included (it was missing or implicit in frontend?)
       - '.github/workflows/docker-publish.yml'
   # Allow manual trigger for testing
   workflow_dispatch:
@@ -21,54 +22,13 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME_BACKEND: ${{ github.repository }}/vegetation-prime-backend
+  # IMAGE_NAME_BACKEND: ${{ github.repository }}/vegetation-prime-backend # Disabled
   IMAGE_NAME_FRONTEND: ${{ github.repository }}/vegetation-prime-frontend
   VERSION: ${{ github.event.inputs.version || (startsWith(github.ref, 'refs/tags/') && github.ref_name) || 'latest' }}
 
 jobs:
-  build-backend:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Extract metadata (backend)
-        id: meta-backend
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=${{ env.VERSION }}
-            type=raw,value=latest,enable={{is_default_branch}}
-      
-      - name: Build and push backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./backend/Dockerfile
-          push: true
-          tags: ${{ steps.meta-backend.outputs.tags }}
-          labels: ${{ steps.meta-backend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+  # Backend build disabled by request (User: "Use existing server environment")
+  # build-backend: ...
 
   build-frontend:
     runs-on: ubuntu-latest
