Add imagePullSecrets to deployments for GHCR authentication

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -28,6 +28,8 @@ spec:
         component: backend
         module: vegetation-prime
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: api
           image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:latest
