--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -28,6 +28,8 @@ spec:
         component: frontend
         module: vegetation-prime
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
       - name: nginx
         image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-frontend:latest
