--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -28,6 +28,8 @@ spec:
         component: worker
         module: vegetation-prime
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: worker
           image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:latest
