feat: add i18n, security improvements, and CI/CD workflow
- Add internationalization (i18next) with es/en/eu translations
- Optimize Dockerfile with multi-stage build and non-root user
- Add NetworkPolicy for backend API security
- Add GitHub Actions workflow for automated builds
- Fix 19 TypeScript errors across 8 files
- Update vite.config.ts with shared dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -65,9 +65,8 @@ htmlcov/
 .hypothesis/
 
 # =============================================================================
-# Docker
+# Docker (keep .dockerignore tracked for build context)
 # =============================================================================
-.dockerignore
 
 # =============================================================================
 # Temporary files
