--- a/env.example
+++ b/env.example
@@ -1,2 +1,40 @@
-# Vegetation Prime Module - Frontend build env
-# Copy to .env.local if needed. API uses relative /api/vegetation (platform exposes it on frontend host).
+# =============================================================================
+# Vegetation Prime Module - Environment Configuration
+# =============================================================================
+# Copy to .env or .env.local. Never commit real secrets (repo is public).
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Frontend (Vite)
+# -----------------------------------------------------------------------------
+VITE_PORT=5003
+VITE_API_URL=https://nkz.artotxiki.com
+
+# -----------------------------------------------------------------------------
+# Backend (FastAPI)
+# -----------------------------------------------------------------------------
+APP_NAME=Vegetation Prime
+DEBUG=false
+API_PREFIX=/api/vegetation
+CORS_ALLOWED_ORIGINS=https://nekazari.artotxiki.com,https://nkz.artotxiki.com
+
+# Keycloak (must match platform)
+JWT_ISSUER=https://auth.artotxiki.com/auth/realms/nekazari
+JWKS_URL=https://auth.artotxiki.com/auth/realms/nekazari/protocol/openid-connect/certs
+JWT_ALGORITHM=RS256
+
+# Database (from platform secret in K8s)
+# DATABASE_URL=postgresql://user:password@host:5432/dbname
+
+# Redis / Celery (from platform secret in K8s)
+# REDIS_PASSWORD=...
+# CELERY_BROKER_URL=redis://:$(REDIS_PASSWORD)@redis-service:6379/0
+
+# Optional: service-to-service auth for sync-limits
+# MODULE_MANAGEMENT_KEY=...
+
+# Storage (MinIO/S3) - optional for local dev
+# AWS_ACCESS_KEY_ID=...
+# AWS_SECRET_ACCESS_KEY=...
+# S3_ENDPOINT_URL=http://minio-service:9000
+# S3_BUCKET=vegetation-prime
