fix: configure nginx cache to prevent stale remoteEntry.js

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,35 +15,45 @@ server {
     }
     
     # Health check endpoint
+    # Handle /modules/vegetation-prime prefix (from ingress)
+    location ~ ^/modules/vegetation-prime/(.*)$ {
+        set $path $1;
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
+        root /usr/share/nginx/html;
+        
+        # CORS headers
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+
+        # Default: Long cache for hashed assets (js, css, png, etc)
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        
+        # Override: Short cache for remoteEntry.js (critical for updates)
+        if ($path ~* remoteEntry\.js$) {
+            expires 60s;
+            add_header Cache-Control "public, max-age=60, must-revalidate";
+        }
+        
+        # Override: No cache for index.html/manifest.json
+        if ($path ~* (index\.html|manifest\.json)$) {
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
+        }
+
+        try_files $uri $uri/ /index.html;
+    }
+    
+    # Internal location for health check
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
     
-    # Handle /modules/vegetation-prime prefix (from ingress)
-    # Rewrite to remove prefix before processing
-    location ~ ^/modules/vegetation-prime/(.*)$ {
-        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
-    
-    # Short cache for remoteEntry.js (critical for Module Federation updates)
-    location ~* remoteEntry\.js$ {
-        add_header Access-Control-Allow-Origin * always;
-        add_header Cache-Control "public, max-age=60, must-revalidate";
-        try_files $uri =404;
-    }
-    
-    # Serve static files from root
+    # Fallback for root access (dev/testing)
     location / {
         try_files $uri $uri/ /index.html;
-    }
-    
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
     }
 }
