fix(nginx): add explicit manifest.json handling

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -44,6 +44,15 @@ server {
 
         try_files $uri $uri/ /index.html;
     }
+
+    # Explicitly serve manifest.json to avoid SPA router capture
+    location = /modules/vegetation-prime/manifest.json {
+        alias /usr/share/nginx/html/manifest.json;
+        add_header Access-Control-Allow-Origin * always;
+        add_header Content-Type application/json;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
     
     # Internal location for health check
     location /health {
