feat: UX enhancement - i18n compliance, skeleton loading, health badges, formula builder
Phase 1 (P0): i18n compliance
- Wrapped ~60 hardcoded strings across 6 components
- Added 130+ keys in 6 namespaces to es/en/eu locales
- Deduplicated TimeseriesChart (removed dead analytics/ copy)

Phase 2 (P1): Visual polish
- Created SkeletonCard.tsx (chart/stats/table variants)
- Replaced TabLoadingFallback spinner with skeleton cards
- Added NDVI health badges to dashboard parcel table

Phase 3 (P2): Formula builder
- Color-coded Sentinel-2 band chips (VIS/NIR/SWIR)
- Operator buttons and NDVI/EVI/SAVI preset insertion
- Visual paren-balance validation (green/red border)
- Wrapped remaining hardcoded strings in VegetationConfig

--- a/manifest.json
+++ b/manifest.json
@@ -42,10 +42,60 @@
     ]
   },
   "build_config": {
-    "type": "remote",
-    "remote_entry_url": "/modules/vegetation-prime/assets/remoteEntry.js",
+    "type": "iife",
+    "remote_entry_url": "/modules/vegetation-prime/nkz-module.js",
     "scope": "vegetation_prime_module",
-    "exposed_module": "./App"
+    "exposed_module": "./moduleEntry"
+  },
+  "slots": {
+    "layer-toggle": [
+      {
+        "id": "vegetation-layer-control",
+        "moduleId": "vegetation-prime",
+        "component": "VegetationLayerControl",
+        "priority": 10
+      }
+    ],
+    "context-panel": [
+      {
+        "id": "vegetation-config",
+        "moduleId": "vegetation-prime",
+        "component": "VegetationConfig",
+        "priority": 20,
+        "showWhen": {
+          "entityType": [
+            "AgriParcel"
+          ]
+        }
+      },
+      {
+        "id": "vegetation-analytics",
+        "moduleId": "vegetation-prime",
+        "component": "VegetationAnalytics",
+        "priority": 30,
+        "showWhen": {
+          "entityType": [
+            "AgriParcel"
+          ]
+        }
+      }
+    ],
+    "bottom-panel": [
+      {
+        "id": "vegetation-timeline",
+        "moduleId": "vegetation-prime",
+        "component": "TimelineWidget",
+        "priority": 10
+      }
+    ],
+    "map-layer": [
+      {
+        "id": "vegetation-prime-cesium-layer",
+        "moduleId": "vegetation-prime",
+        "component": "VegetationLayer",
+        "priority": 10
+      }
+    ]
   },
   "metadata": {
     "icon": "🌱",
@@ -60,44 +110,6 @@
     ],
     "screenshots": [
       "assets/screenshot1.png"
-    ],
-    "slots": {
-      "layer-toggle": [
-        {
-          "id": "vegetation-layer-control",
-          "component": "VegetationLayerControl",
-          "priority": 10
-        }
-      ],
-      "context-panel": [
-        {
-          "id": "vegetation-config",
-          "component": "VegetationConfig",
-          "priority": 20,
-          "showWhen": {
-            "entityType": [
-              "AgriParcel"
-            ]
-          }
-        },
-        {
-          "id": "vegetation-analytics",
-          "component": "VegetationAnalytics",
-          "priority": 30,
-          "showWhen": {
-            "entityType": [
-              "AgriParcel"
-            ]
-          }
-        }
-      ],
-      "bottom-panel": [
-        {
-          "id": "vegetation-timeline",
-          "component": "TimelineWidget",
-          "priority": 10
-        }
-      ]
-    }
+    ]
   }
 }
