--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.3.0",
+    "@nekazari/module-builder": "file:../nkz/packages/module-builder",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
