feat(datahub): Arrow IPC adapter and Orion-LD vegetation status patch
- Add POST /api/internal/timeseries/export-arrow endpoint for DataHub
  scatter-gather federation. Serves zonal statistics (mean_value) from
  vegetation_indices_cache via pyarrow. Timestamps in Float64 epoch seconds
  per ADAPTER_SPEC contract. Single series → "value" column; multi → "value_N".

- After index calculation (Celery), PATCH AgriParcel in Orion-LD with flat
  properties ndviMean/ndreMean + source:"vegetation_health" metadata so the
  DataHub entity tree discovers them dynamically. Lazy evaluation: only NDVI
  and NDRE published by default. PATCH is non-blocking (log warning on error).

- Add pyarrow==15.0.2 to requirements.txt.

- Remove artotxiki.com hardcoded defaults from auth middleware; JWT_ISSUER
  and JWKS_URL now read exclusively from env vars (fail-safe, no domain leak).

- Deprecate carbon_calculator.py with migration note to nkz-module-carbon.

- Dev proxy target reads from VITE_DEV_API_TARGET env var instead of
  hardcoded production URL.

- Replace console.log with conditional console.debug in moduleEntry.ts.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,6 +40,9 @@ sentinelsat==1.2.1
 # Image processing
 Pillow==10.1.0
 
+# Apache Arrow — required for DataHub timeseries adapter
+pyarrow==15.0.2
+
 # Storage (S3/MinIO)
 boto3==1.29.7
 botocore==1.32.7
